<resources>
    <string name="app_name">燎原生活</string>
    <string name="checkin">点击进入</string>
    <string name="weixin_key">02b5fbf3d18be6bf5084bb302188525e</string>
    <string name="sina_weibo_key">00000000000</string>


    <string name="my">我的</string>
    <string name="order">订单</string>
    <string name="map">地图</string>
    <string name="index">首页</string>
    <string name="network_err">没有更多数据了</string>
    <string name="account_management">账号管理</string>
    <string name="shipping_address">收货地址</string>
    <string name="shopping_car">购物车</string>
    <string name="no_evaluate">好评！</string>
    <string name="shop">店铺</string>
    <string name="user_evaluate">用户评价</string>
    <string name="education">教育</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="product_info">产品详情</string>
    <string name="error_network">网络出错，请重试</string>
    <string name="no_data">返回数据为空</string>
    <string name="commit_order">提交订单</string>
    <string name="confirm">确定</string>
    <string name="i_know">知道了</string>
    <string name="cancel">取消</string>
    <string name="donot_show_again">不再提醒</string>
    <string name="product">商品</string>
    <string name="service">服务</string>
    <string name="refund">退款</string>
    <string name="evaluate">效果如何，服务是否周到，环境怎么样？（写给更多人参考~）</string>


    <string name="withdraw_explain"><Data><![CDATA[1、提现到的账号必须是本人实名认证身份证所办理的银行账号<br> 2、工作日16:00前申请提现，当天到账；16:00之后申请提现，下个工作日到账；周末或国家节假日申请的提现，统一在上班后 第一个工作日处理<br>
                3、提现收取 2元/笔 手续费<br>4、如有任何疑问，请联系客服电话0797-8330000<br>

    </font>]]></Data></string>
    <string name="enter">这是SDK_Sample的入口界面</string>
    <string name="reg">将该app注册到微信</string>
    <string name="goto_send">跳转到发消息界面</string>
    <string name="launch_wx">启动微信</string>
    <string name="check_timeline_supported">检查是否支持发送到朋友圈</string>
    <string name="scan_qrcode_login">扫码登录</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>


    <string name="ok">确定</string>
    <string name="retry">重试</string>
    <string name="download">下载</string>
    <string name="ignore">忽略</string>

</resources>
