<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:paddingBottom="60dp"
    android:paddingTop="60dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:paddingBottom="60dp"
        android:paddingTop="60dp" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="40dp"
            android:background="@drawable/shape_btn_gray" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_dialog_info_background"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:gravity="center_horizontal"
                    android:text="提示信息"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:scrollbars="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:orientation="vertical"
                        android:padding="5dp" >

                        <TextView
                            android:id="@+id/message"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:background="@android:color/transparent"
                            android:lineSpacingExtra="2dp"
                            android:text="@string/app_name"
                            android:textColor="@color/text_color"
                            android:textSize="16sp" />

                        <CheckBox
                            android:id="@+id/dialog_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/activity_vertical_margin"
                            android:layout_marginStart="@dimen/activity_vertical_margin"
                            android:button="@drawable/check_box_style"
                            android:clickable="false"
                            android:text="@string/donot_show_again"
                            android:textColor="@color/text_color"
                            android:textSize="16sp"
                            android:visibility="gone" />
                    </LinearLayout>
                </ScrollView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/grey_background" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@android:color/transparent" >

                    <LinearLayout
                        android:id="@+id/button_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent" >

                        <Button
                            android:id="@+id/cancel"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/selector_white_button_bottom_left_corners"
                            android:text="@string/cancel"
                            android:textColor="@color/text_color"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="1px"
                            android:layout_height="match_parent"
                            android:background="@color/grey_background" />

                        <Button
                            android:id="@+id/confirm"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/selector_white_button_bottom_right_corners"
                            android:text="@string/confirm"
                            android:textColor="@color/text_color"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/close"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/selector_dialog_close_background"
                        android:text="@string/i_know"
                        android:textColor="@color/text_color"
                        android:textSize="16sp"
                        android:visibility="visible" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>